--- a/src/index.css
+++ b/src/index.css
@@ -472,6 +472,58 @@ border-radius: 50%;
   }
   
 }
+.circle{
+  background: linear-gradient(45deg, #007BFF, #00BFFF);
+}
+
+.circle:hover {
+  transform: scale(1.05);
+  transition: transform 0.3s ease;
+}
+
+
+
+.scrolling-text {
+  animation: scroll 20s linear infinite;
+  white-space: nowrap;
+}
+
+@keyframes scroll {
+  0% {
+    transform: translateX(100%);
+  }
+  100% {
+    transform: translateX(-100%);
+  }
+}
+
+/* ----------------------------------- */
+/* tickets */
+/* Add this CSS to the component or global stylesheet */
+.wave-pattern {
+  position: relative;
+  bottom: -20px; /* Adjust this value for the wave height */
+  left: 0;
+  width: 100%;
+  height: 240px; /* Wave height */
+  background: linear-gradient(135deg, #ff6b6b, #ffcc00, #00bcd4);
+  /* border-radius: 50%; */
+  animation: wave 6s ease-in-out infinite;
+  /* z-index: -1; */
+}
+
+/* Keyframe animation for wave effect */
+/* @keyframes wave {
+  0% {
+    transform: translateX(0);
+  }
+  50% {
+    transform: translateX(10px);
+  }
+  100% {
+    transform: translateX(0);
+  }
+} */
 
 
 
